erDiagram
    users ||--o{ projectMembers : "joins"
    users ||--o{ tasks : "creates/assigned"
    users ||--o{ taskComments : "writes"
    users ||--o{ taskFollowers : "follows"
    users ||--o{ notifications : "receives"
    
    projects ||--o{ projectMembers : "has"
    projects ||--o{ tasks : "contains"
    
    tasks ||--o{ tasks : "has subtasks"
    tasks ||--o{ taskDependencies : "depends on"
    tasks ||--o{ taskChecklists : "has"
    tasks ||--o{ defects : "has"
    tasks ||--o{ taskComments : "has"
    tasks ||--o{ taskAttachments : "has"
    tasks ||--o{ taskFollowers : "followed by"
    
    checklistTemplates ||--o{ checklistTemplateItems : "contains"
    checklistTemplates ||--o{ taskChecklists : "used in"
    
    taskChecklists ||--o{ checklistItemResults : "has results"
    
    checklistItemResults ||--o{ defects : "may create"
    
    users {
        int id PK
        varchar openId UK
        text name
        varchar email
        enum role
        timestamp createdAt
    }
    
    projects {
        int id PK
        varchar name
        varchar code
        text location
        timestamp startDate
        timestamp endDate
        enum status
        int createdBy FK
    }
    
    projectMembers {
        int id PK
        int projectId FK
        int userId FK
        enum role
    }
    
    tasks {
        int id PK
        int projectId FK
        int parentTaskId FK
        varchar name
        timestamp startDate
        timestamp endDate
        int progress
        enum status
        int assigneeId FK
    }
    
    taskDependencies {
        int id PK
        int taskId FK
        int dependsOnTaskId FK
        enum type
    }
    
    checklistTemplates {
        int id PK
        varchar name
        varchar category
        enum stage
        int createdBy FK
    }
    
    checklistTemplateItems {
        int id PK
        int templateId FK
        text itemText
        boolean requirePhoto
        int order
    }
    
    taskChecklists {
        int id PK
        int taskId FK
        int templateId FK
        enum stage
        enum status
        int inspectedBy FK
        text signature
    }
    
    checklistItemResults {
        int id PK
        int taskChecklistId FK
        int templateItemId FK
        enum result
        text comment
        text photoUrls
    }
    
    defects {
        int id PK
        int taskId FK
        int checklistItemResultId FK
        varchar title
        text description
        enum status
        enum severity
        int assignedTo FK
        int reportedBy FK
    }
    
    taskComments {
        int id PK
        int taskId FK
        int userId FK
        text content
        text mentions
        text attachmentUrls
    }
    
    taskAttachments {
        int id PK
        int taskId FK
        varchar fileName
        text fileUrl
        int uploadedBy FK
    }
    
    taskFollowers {
        int id PK
        int taskId FK
        int userId FK
    }
    
    notifications {
        int id PK
        int userId FK
        enum type
        varchar title
        int relatedTaskId FK
        boolean isRead
    }
